# AutoSIM_olcPixel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main_auto_vehicle.cpp
.github/workflows/: c-cpp.yml
Configs/: initializeGame.yaml
configs/: initializeGame.yaml
include/: auto_vehicle.h  logger.h  olcPGEX_Graphics2D.h  utils.h  vehicle.h
src/: OneLoneCoder_PGE_olcEngine3D.cpp  TEST_Animate2D.cpp  TEST_Camera2D.cpp  TEST_QuickGUI.cpp  auto_vehicle.cpp  logger.cpp  my_game.cpp  vehicle.cpp
tests/: CMakeLists.txt  parse_tests.cpp
